Adding 3 new website projects

--- a/index.html
+++ b/index.html
@@ -199,33 +199,7 @@
                   <i class="bx bxs-badge-check"></i>
 
                   <div>
-                    <h3 class="skills__name">Node js</h3>
-                    <span class="skills__level">Basic</span>
-                  </div>
-                </div>
-                <div class="skills__data">
-                  <i class="bx bxs-badge-check"></i>
-
-                  <div>
-                    <h3 class="skills__name">Express</h3>
-                    <span class="skills__level">Basic</span>
-                  </div>
-                </div>
-                <div class="skills__data">
-                  <i class="bx bxs-badge-check"></i>
-
-                  <div>
-                    <h3 class="skills__name">MongoDB</h3>
-                    <span class="skills__level">Basic</span>
-                  </div>
-                </div>
-              </div>
-              <div class="skills__group">
-                <div class="skills__data">
-                  <i class="bx bxs-badge-check"></i>
-
-                  <div>
-                    <h3 class="skills__name">PostgreSQL</h3>
+                    <h3 class="skills__name">Nodejs</h3>
                     <span class="skills__level">Basic</span>
                   </div>
                 </div>
@@ -241,7 +215,33 @@
                   <i class="bx bxs-badge-check"></i>
 
                   <div>
-                    <h3 class="skills__name">Python</h3>
+                    <h3 class="skills__name">MySQL</h3>
+                    <span class="skills__level">Basic</span>
+                  </div>
+                </div>
+              </div>
+              <div class="skills__group">
+                <div class="skills__data">
+                  <i class="bx bxs-badge-check"></i>
+
+                  <div>
+                    <h3 class="skills__name">PHP</h3>
+                    <span class="skills__level">Basic</span>
+                  </div>
+                </div>
+                <div class="skills__data">
+                  <i class="bx bxs-badge-check"></i>
+
+                  <div>
+                    <h3 class="skills__name">PostgreSQL</h3>
+                    <span class="skills__level">Basic</span>
+                  </div>
+                </div>
+                <div class="skills__data">
+                  <i class="bx bxs-badge-check"></i>
+
+                  <div>
+                    <h3 class="skills__name">MongoDB</h3>
                     <span class="skills__level">Basic</span>
                   </div>
                 </div>
@@ -436,28 +436,28 @@
         <div class="work__container container grid">
           <!-- Work Card --> 
           <div class="work__card mix web">
-            <img src="assets/img/work1.jpg" alt="" class="work__img" />
-            <h3 class="work__title">Website</h3>
-            <a href="#" class="work__button"> Demo <i class="bx bx-right-arrow-alt work__icon"></i> </a>
+            <img src="assets/img/duck-adopt.png" alt="graphic image of duck adopt logo" class="work__img" />
+            <h3 class="work__title">Duck Adopt | Wordpress Site</h3>
+            <a href="https://tkimdev.com/" target="_blank" class="work__button"> View Project <i class="bx bx-right-arrow-alt work__icon"></i> </a>
           </div>
           <!-- Work Card --> 
           <div class="work__card mix web">
-            <img src="assets/img/work2.jpg" alt="" class="work__img" />
-            <h3 class="work__title">Web App</h3>
-            <a href="#" class="work__button"> View Project <i class="bx bx-right-arrow-alt work__icon"></i> </a>
+            <img src="assets/img/museum-of-candy.png" alt="graphic image of hand holding a candy donut" class="work__img" />
+            <h3 class="work__title">Museum of Candy | Bootstrap Site</h3>
+            <a href="https://tkimdev.github.io/Museum-of-Candy/" target="_blank" class="work__button"> View Project <i class="bx bx-right-arrow-alt work__icon"></i> </a>
           </div>
           <!-- Work Card --> 
-          <div class="work__card mix apps">
-            <img src="assets/img/work3.jpg" alt="" class="work__img" />
-            <h3 class="work__title">Website</h3>
-            <a href="#" class="work__button"> View Project <i class="bx bx-right-arrow-alt work__icon"></i> </a>
+          <div class="work__card mix web">
+            <img src="assets/img/new-biz.png" alt="" class="work__img" />
+            <h3 class="work__title">Newbiz | SCSS site</h3>
+            <a href="https://tkimdev.github.io/modern-website/" target="_blank" class="work__button"> View Project <i class="bx bx-right-arrow-alt work__icon"></i> </a>
           </div>
           <!-- Work Card --> 
-          <div class="work__card mix apps">
+          <!-- <div class="work__card mix apps">
             <img src="assets/img/work4.jpg" alt="" class="work__img" />
             <h3 class="work__title">Web App</h3>
             <a href="#" class="work__button"> View Project <i class="bx bx-right-arrow-alt work__icon"></i> </a>
-          </div>
+          </div> -->
           <!-- Work Card -->
           <!-- <div class="work__card mix mobile">
             <img src="assets/img/work5.jpg" alt="" class="work__img" />
