--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h1 class="home__name">Tony Kim</h1>
             <h3 class="home__education">Software Development Engineer</h3>
             <div class="home__buttons">
-              <a download="" href="assets/pdf/tk-resume.pdf" class="button button--ghost">
+              <a download="" href="https://drive.google.com/file/d/1Vt8MoitI3LyzzqX2xx_Y75JXxEQvrMi5/view?usp=drive_link" target="_blank" class="button button--ghost">
                 Download CV
               </a>
               <a href="#about" class="button">About Me</a>
